--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">my-paoku</string>
+    <string name="app_name">萌菜塔防</string>
 
     <string name="facebook_app_id">202252443613822</string>
 
